apps/base/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-service
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: glance
  ports:
    - port: 80
      targetPort: 80
