apps/base/glance/ingress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.ysonsbaolab.dev`)
      kind: Rule
      services:
        - name: glance-service
          port: 8080
  tls:
    secretName: glance-certificate-secret
